# gungnir

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  atom.go  bun.lockb  cons.go  data.go  go.mod  go.sum  gungnir.go  justfile  main.go  main.py  package.json  parser.go  pyproject.toml  repl.go  smollisp.py
gungnir/: env.py  gungnir.py  parser.py  types.py
smollisp/: env.py  eval.py  parsing.py  repl.py  types.py
src/: const.h  index.ts  main.c  main.rs  types.rs  types.ts
