[tool.poetry]
name = "smollisp"
version = "0.1.0"
description = "A portable Lisp Interpreter"
authors = ["sagnikc395 <sagnikchatterjee395@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
